--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/redux-persist": "^4.3.1",
+    "express": "^4.17.1",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "serve": "npm run build && node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
