--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/redux-persist": "^4.3.1",
+    "@types/uuid": "^8.3.0",
+    "axios": "^0.20.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
@@ -20,7 +22,9 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "typescript": "^3.7.5"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^3.7.5",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
