--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "tick-tack-toe",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
+  "description": "Tick Tack Toe",
+  "author": "Md. Ariful Islam",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
